# foliautils

./: .gitignore  .travis.yml  AUTHORS  Dockerfile  Makefile.am  NEWS  README  README.md  TODO  bootstrap.sh  build-deps.sh  codemeta.json  configure.ac  dox.cfg
.github/workflows/: cleanup.yml  foliautils.yml
docs/: FoLiA-2text.1  FoLiA-abby.1  FoLiA-alto.1  FoLiA-clean.1  FoLiA-collect.1  FoLiA-correct.1  FoLiA-hocr.1  FoLiA-idf.1  FoLiA-langcat.1  FoLiA-page.1  FoLiA-pm.1  FoLiA-stats.1  FoLiA-txt.1  Makefile.am  idf.1  tel.1
include/: Makefile.am
include/foliautils/: Makefile.am  common_code.h
lcconfig/: tc.txt
m4/: Makefile.am
src/: FoLiA-2text.cxx  FoLiA-abby.cxx  FoLiA-alto.cxx  FoLiA-benchmark.cxx  FoLiA-clean.cxx  FoLiA-collect.cxx  FoLiA-correct.cxx  FoLiA-hocr.cxx  FoLiA-idf.cxx  FoLiA-langcat.cxx  FoLiA-merge.cxx  FoLiA-page.cxx  FoLiA-pm.cxx  FoLiA-stats.cxx  FoLiA-txt.cxx  FoLiA-unk.cxx  FoLiA-wordtranslate.cxx  Makefile.am  collect.cxx  common_code.cxx  idf.cxx  tel.cxx  tst.sh  txt2foliastr.cxx
tests/: .gitignore  Makefile.am  auch.ok  bisbug.ticcl.ok  clean_fix.ok  clean_tok.ok  cleaned_all.ok  cleaned_lang.ok  corr.ticcl.2.ok  corr.ticcl.3.ok  corr.ticcl.folia.1.ok  corr.ticcl.folia.2.ok  corr.ticcl.ok  corr.xml  corr_str.ticcl.1.ok  corr_str.ticcl.2.ok  corr_word.ticcl.1.ok  corr_word.ticcl.2.ok  corr_word_T.ticcl.1.ok  corr_word_T.ticcl.2.ok  corr_word_T.ticcl.3.ok  corr_word_T.ticcl.4.ok  corr_word_T.ticcl.xml  corr_word_spaces.ticcl.1.ok  corr_word_spaces.ticcl.2.ok  corr_word_spaces.ticcl.3.ok  dpo-alto-str.ok  dpo-alto-w.ok  dpo-alto.ok  dpo.lst  dpo.ok  foliadiff.sh  hemp1.ok  hocr.xml.ok  hyph.ok  hyph.txt.ok  issue35.ok  item.txt.ok  langcat.xml.ok  levi.break.ok  (+121 more)
tests/NAK/: NAK.folia.xml  NAK99.xml
tests/correctproblems/: bisbug.xml  bug.xml  bug2.xml  bug4.xml  chain.chained  lastbug.xml  newbug.xml  otherbug.xml  punct.punct  unk.unk
tests/data/: Morse2.xml  corr.folia.xml  corr.xml  corr_str.xml  corr_word.xml  corr_word_T.xml  corr_word_spaces.xml  demo.hocr  dirty.folia.xml  dirty2.folia.xml  double_cor.xml  folia-head.xml  folia.xml  folia2.xml  frog2.xml  hyph.txt  issue35.xml  langcat.test-str.xml  langcat.test.xml  langcat.test2.xml  lexicon.1637-2010.250.lexserv.vandale.tsv  markup.xml  p_note_test.xml  sonar.xml  statstest.xml  test:mpeg21.xml
tests/data/abby/: auch.xml  hyph.xml  item.xml  morse_OCR_perletter.xml  piroska.abby.xml  table.xml
tests/data/hemp/: hemptest.xml
tests/data/page/: 00667460.xml  00667461.xml  00667462.xml  00667463.xml  00667464.xml  00667465.xml  00667466.xml  00667467.xml  00667468.xml  martin.xml  piros.xml  piroska.xml
tests/data/pm/: pm1.xml  pm10.xml  pm11.xml  pm2.xml  pm3.xml  pm4.xml  pm5.xml  pm6.xml  pm7.xml  pm8.xml  pm9.xml
tests/data/trans/: _aar004aard01_01.tok.folia.xml
tests/data/txt/: hyph.txt  paragraphs.txt  test.txt
tests/merge/: greek.lex  greek2.xml
tests/ok/: testtxt.1.ok  testtxt.2.ok  testtxt.3.ok  testtxt.4.ok  testtxt.5.ok  testtxt.6.ok
xslt/: extract-compounds.xsl
