# $Id: Makefile.am 8993 2011-03-21 11:19:11Z sloot $
# $URL: https://ilk.uvt.nl/svn/trunk/sources/Timbl6/docs/Makefile.am $

man1_MANS = FoLiA-idf.1 FoLiA-stats.1 FoLiA-langcat.1 FoLiA-correct.1 \
	FoLiA-collect.1 FoLiA-page.1 FoLiA-hocr.1 FoLiA-txt.1 \
	FoLiA-2text.1 FoLiA-alto.1 FoLiA-abby.1 FoLiA-clean.1
	FoLiA-pm.1

EXTRA_DIST = FoLiA-stats.1 FoLiA-idf.1 FoLiA-langcat.1 FoLiA-correct.1 \
	FoLiA-collect.1 FoLiA-page.1 FoLiA-hocr.1 FoLiA-txt.1 \
	FoLiA-2text.1 FoLiA-alto.1 FoLiA-abby.1 FoLiA-clean.1 \
	FoLiA-pm.1
