
EXTRA_DIST = testone.sh test2text testtxt testalto testcorrect \
	testhocr testidf testpage testlangcat teststats \
	testcollect testpm \
	testclean testwordtranslate \
	test2text.ok testtxt.ok testalto.ok testcorrect.ok \
	testhocr.ok testidf.ok testpage.ok testlangcat.ok teststats.ok \
	testcollect.ok testpm.ok \
	testclean.ok testwordtranslate.ok
